--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "planbot",
   "version": "0.2.2",
   "description": "",
-  "main": "index.js",
+  "main": "src\\index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
